Made changes